--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <style>
-body, input {
+body, input, button {
     font-size: 30px;
 }
 </style>    
@@ -12,8 +12,25 @@ body, input {
 
 <br>
 Color: <input id="picker" class="jscolor" value="ab2567" onchange="updateColor(this.value)"><br>
+<button style="background:#a0a0a0" onclick="setColor(this.innerHTML)">a0a0a0</button>
+<button style="background:#56A08A" onclick="setColor(this.innerHTML)">56A08A</button>
+<button style="background:#867AA0" onclick="setColor(this.innerHTML)">867AA0</button>
+<button style="background:#A0887D" onclick="setColor(this.innerHTML)">A0887D</button>
+<button style="background:#A0868E" onclick="setColor(this.innerHTML)">A0868E</button>
+<br>
+
 Width: <input id="width" value="10" onchange="updateWidth(this.value)"><br>
+<button onclick="updateWidth(this.innerHTML)">10</button>
+<button onclick="updateWidth(this.innerHTML)">25</button>
+<button onclick="updateWidth(this.innerHTML)">50</button>
+<button onclick="updateWidth(this.innerHTML)">100</button>
+<br>
 Alpha: <input id="alpha" value=".5" onchange="updateAlpha(this.value)"><br>
+<button onclick="updateAlpha(this.innerHTML)">.01</button>
+<button onclick="updateAlpha(this.innerHTML)">.02</button>
+<button onclick="updateAlpha(this.innerHTML)">.05</button>
+<button onclick="updateAlpha(this.innerHTML)">1</button>
+<br>
 </body>
 <script>
 // based on http://stackoverflow.com/a/17359298/738675
@@ -29,14 +46,22 @@ var colorRGB = {r: 100, g: 100, b: 100};
 var alpha = .5;
 
 function updateColor(val) {
+    console.log('updateColor')
     valRGB = hexToRgb(val);
     colorRGB = {r: valRGB.r, g: valRGB.g, b: valRGB.b};
+    document.getElementById("picker").value = val;
+}
+function setColor(val) {
+    document.getElementById('picker').jscolor.fromString(val);
+    updateColor(val);
 }
 function updateWidth(val) {
     w = val;
+    document.getElementById("width").value = val;
 }
 function updateAlpha(val) {
     alpha = val;
+    document.getElementById("alpha").value = val;
 }
 
 function hexToRgb(hex) {
