--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
     <button class="jscolor {value:'A0868E'}" onclick="setColor(this.innerHTML)">A0868E</button>
     <br>
 
-    Width: <input id="width" value="10" onchange="updateWidth(this.value)"><br>
+    Width: <input id="width" value="50" onchange="updateWidth(this.value)"><br>
     <button onclick="updateWidth(this.innerHTML)">10</button>
     <button onclick="updateWidth(this.innerHTML)">25</button>
     <button onclick="updateWidth(this.innerHTML)">50</button>
     <button onclick="updateWidth(this.innerHTML)">100</button>
     <br>
-    Alpha: <input id="alpha" value=".5" onchange="updateAlpha(this.value)"><br>
+    Alpha: <input id="alpha" value=".02" onchange="updateAlpha(this.value)"><br>
     <button onclick="updateAlpha(this.innerHTML)">.01</button>
     <button onclick="updateAlpha(this.innerHTML)">.02</button>
     <button onclick="updateAlpha(this.innerHTML)">.05</button>
@@ -95,7 +95,7 @@
     <!-- End of 3rd party libraries -->
 
     <!-- Main tangram library -->
-    <script src="https://mapzen.com/tangram/0.7/tangram.min.js"></script>
+    <script src="https://mapzen.com/tangram/0.7/tangram.debug.js"></script>
 
     <!-- Demo module -->
     <script src="main.js"></script>
