tweak preset colors

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 
     <br>
     Color: <input id="picker" class="jscolor" value="ab2567" onchange="updateColor(this.value)"><br>
-    <button class="jscolor {value:'a0a0a0'}" onclick="setColor(this.innerHTML)" onchange="this.click()">a0a0a0</button>
+    <button class="jscolor {value:'ffffff'}" onclick="setColor(this.innerHTML)">ffffff</button>
     <button class="jscolor {value:'56A08A'}" onclick="setColor(this.innerHTML)">56A08A</button>
     <button class="jscolor {value:'867AA0'}" onclick="setColor(this.innerHTML)">867AA0</button>
     <button class="jscolor {value:'A0887D'}" onclick="setColor(this.innerHTML)">A0887D</button>
-    <button class="jscolor {value:'A0868E'}" onclick="setColor(this.innerHTML)">A0868E</button>
+    <button class="jscolor {value:'AB2567'}" onclick="setColor(this.innerHTML)">AB2567</button>
     <br>
 
     Width: <input id="width" value="50" onchange="updateWidth(this.value)"><br>
