--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.js"></script>
     <!-- bog-standard leaflet URL hash -->
     <script src="lib/leaflet-hash.js"></script>
+    <!-- make canvas.toBlob work in Safari -->
+    <script type="text/javascript" src="lib/Blob.js"></script>
+    <script type="text/javascript" src="lib/canvas-toBlob.js"></script>
     <!-- End of 3rd party libraries -->
 
     <!-- Main tangram library -->
