add normal scale buttons

--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
     <button onclick="updateAlpha(this.innerHTML)">.02</button>
     <button onclick="updateAlpha(this.innerHTML)">.05</button>
     <button onclick="updateAlpha(this.innerHTML)">1</button>
+    <br>
+    Normal scale: <input id="scale" value=".5" onchange="updateScale(this.value)"><br>
+    <button onclick="updateScale(this.innerHTML)">.05</button>
+    <button onclick="updateScale(this.innerHTML)">.1</button>
+    <button onclick="updateScale(this.innerHTML)">.2</button>
+    <button onclick="updateScale(this.innerHTML)">.5</button>
     </div>
 
     <div id="map"></div>
