--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <img id="reticle" src="reticle.png">
 
     <canvas id="kcanvas" width="512px" height="512px" style="border:1px #000 solid;"></canvas>
-    <script src="jscolor.min.js"></script>
+    <script src="lib/jscolor.min.js"></script>
 
     <br>
     Color: <input id="picker" class="jscolor" value="ab2567" onchange="updateColor(this.value)"><br>
