save canvas by opening in new tab

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
             top: 5.33px;
             opacity: 0.2;
         }
+        #saveButton {
+            font-size: 30px;
+            float: right;
+            clear: none;
+        }
 
     </style>
   </head>
@@ -79,8 +84,10 @@
     Alpha: <input id="alpha" value=".15" onchange="updateAlpha(this.value)"><br>
     <input type="range" min=".001" max=".2" value=".15" step=".001" oninput="updateAlpha(this.value)">
     <br>
-    Normal scale: <input id="scale" value=".5" onchange="updateScale(this.value)"><br>
-    <input type="range" min="0.01" max="1" value=".5" step=".001" oninput="updateScale(this.value)">
+    Scale: <input id="scale" value=".5" onchange="updateScale(1-1/Math.pow(2,this.value))"><br>
+    <input type="range" min="0.01" max="5" value=".5" step=".001" oninput="updateScale(1-1/Math.pow(2,this.value))">
+    <br>
+    <button id="saveButton" onclick="exportCanvas()">Save</button>
     </div>
 
     <div id="map"></div>
