--- a/index.html
+++ b/index.html
@@ -70,16 +70,10 @@
     <script src="lib/jscolor.min.js"></script>
 
     <br>
-    Color: <input id="picker" class="jscolor" value="ab2567" onchange="updateColor(this.value)"><br>
-    <button class="jscolor {value:'ffffff'}" onclick="setColor(this.innerHTML)">ffffff</button>
-    <button class="jscolor {value:'56A08A'}" onclick="setColor(this.innerHTML)">56A08A</button>
-    <button class="jscolor {value:'867AA0'}" onclick="setColor(this.innerHTML)">867AA0</button>
-    <button class="jscolor {value:'A0887D'}" onclick="setColor(this.innerHTML)">A0887D</button>
-    <button class="jscolor {value:'AB2567'}" onclick="setColor(this.innerHTML)">AB2567</button>
-    <br>
+    Color: <input id="picker" class="jscolor" value="ab2567" onchange="updateColor(this.value);this.jscolor.hide();"><br>
 
-    Brush Width: <input id="width" value="100" onchange="updateWidth(this.value)"><br>
-    <input type="range" min="0" max="200" value="100" step="1" oninput="updateWidth(this.value)">
+    Brush Width: <input id="width" value="150" onchange="updateWidth(this.value)"><br>
+    <input type="range" min="0" max="200" value="150" step="1" oninput="updateWidth(this.value)">
     <br>
     Brush Alpha: <input id="alpha" value=".01" onchange="updateAlpha(this.value)"><br>
     <input type="range" min=".001" max=".2" value=".01" step=".001" oninput="updateAlpha(this.value)">
