--- a/index.html
+++ b/index.html
@@ -90,9 +90,12 @@
     <input type="range" min="0.01" max="5" value="2" step=".001" oninput="updateScale(this.value)">
     <br>
     <button class="kbutton" onclick="exportCanvas()">SAVE</button>
+    <!-- <input type="file" onchange="previewFile()" value="LOAD"> -->
     <button class="kbutton" onclick="clearCanvas();updateMap();">RESET</button>
     </div>
-
+    <!-- Hide default dropzone thumbnail -->
+    <div id="preview-template" style="display: none;"><div></div></div>
+</div>
     <script>
     // http://www.paulirish.com/2009/random-hex-color-code-snippets/
     var n = Math.floor(Math.random()*16777215).toString(16);
@@ -118,6 +121,8 @@
     <!-- make canvas.toBlob work in Safari -->
     <script type="text/javascript" src="lib/Blob.js"></script>
     <script type="text/javascript" src="lib/canvas-toBlob.js"></script>
+    <!-- drag-n-drop upload -->
+    <script type="text/javascript" src="lib/dropzone.js"></script>
     <!-- End of 3rd party libraries -->
 
     <!-- Main tangram library -->
