--- a/index.html
+++ b/index.html
@@ -89,9 +89,14 @@
     Terrain Scale: <input id="scale" value="2" onchange="updateScale(this.value)"><br>
     <input type="range" min="0.01" max="5" value="2" step=".001" oninput="updateScale(this.value)">
     <br>
+    Blur: <input id="blur" value="0" onchange="updateBlur(this.value)"><br>
+    <input type="range" min="0" max="100" value="0" step=".01" oninput="updateBlur(this.value)">
+    <br>
     <button class="kbutton" onclick="exportCanvas()">SAVE</button>
     <!-- <input type="file" onchange="previewFile()" value="LOAD"> -->
     <button class="kbutton" onclick="clearCanvas();updateMap();">RESET</button>
+    <!-- Hide blur image -->
+    <img id="lastCanvas" style="display:none"/>
     </div>
     <!-- Hide default dropzone thumbnail -->
     <div id="preview-template" style="display: none;"><div></div></div>
@@ -123,6 +128,8 @@
     <script type="text/javascript" src="lib/canvas-toBlob.js"></script>
     <!-- drag-n-drop upload -->
     <script type="text/javascript" src="lib/dropzone.js"></script>
+    <!-- blur -->
+    <script type="text/javascript" src="lib/StackBlur.js"></script>
     <!-- End of 3rd party libraries -->
 
     <!-- Main tangram library -->
