--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
     </div>
 
 
-    Brush Width: <input id="width" value="100" onchange="updateWidth(this.value)"><br>
-    <input type="range" min="0" max="200" value="100" step="1" oninput="updateWidth(this.value)">
+    Brush Width:<br>
+    <input type="range" id="width" min="0" max="200" value="100" step="1" oninput="updateWidth(this.value)">
     <br>
-    Brush Alpha: <input id="alpha" value=".01" onchange="updateAlpha(this.value)"><br>
-    <input type="range" min=".001" max=".2" value=".01" step=".001" oninput="updateAlpha(this.value)">
+    Brush Alpha:<br>
+    <input type="range" id="alpha" min=".001" max=".2" value=".01" step=".001" oninput="updateAlpha(this.value)">
     <br>
-    Terrain Scale: <input id="scale" value="2" onchange="updateScale(this.value)"><br>
+    Terrain Scale: <input id="scale" value="2" size=5 onchange="updateScale(this.value)"><br>
     <input type="range" min="0.01" max="5" value="2" step=".001" oninput="updateScale(this.value)">
     <br>
-    Blur: <input id="blur" value="0" onchange="updateBlur(this.value)"><br>
-    <input type="range" min="0" max="100" value="0" step=".01" oninput="updateBlur(this.value)">
+    Blur:<br>
+    <input type="range" id="blur" min="0" max="100" value="0" step=".01" oninput="updateBlur(this.value)">
     <br>
     Draw Lines: <input type="checkbox" id="vector" checked="true" onchange="updateLines(this.checked)"><br>
     Solid Water: <input type="checkbox" id="ocean" checked="false" onchange="updateOcean(this.checked)"><br>
