--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <!-- End of 3rd party libraries -->
 
     <!-- Main tangram library -->
-    <script src="https://mapzen.com/tangram/0.8/tangram.debug.js"></script>
+    <script src="https://mapzen.com/tangram/tangram.debug.js"></script>
 
     <!-- Demo module -->
     <script src="main.js"></script>
