reset default brush

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
 
 
     Brush Width:<br>
-    <input type="range" id="width" min="0" max="200" value="10" step="1" oninput="updateWidth(this.value)">
+    <input type="range" id="width" min="0" max="200" value="100" step="1" oninput="updateWidth(this.value)">
     <br>
     Brush Alpha:<br>
-    <input type="range" id="alpha" min=".001" max=".2" value="1.01" step=".001" oninput="updateAlpha(this.value)">
+    <input type="range" id="alpha" min=".001" max=".2" value=".01" step=".001" oninput="updateAlpha(this.value)">
     <br>
     Terrain Scale: <input id="scale" value="2" size=5 onchange="updateScale(this.value)"><br>
     <input type="range" min="0.01" max="5" value="2" step=".001" oninput="updateScale(this.value)">
