--- a/index.html
+++ b/index.html
@@ -75,6 +75,21 @@
         .rewindwrapper {
             display:inline-block;
         }
+        #swatches {
+            width: 100%;
+            height: 1em;
+            /*border: 2px solid blue;*/
+            margin: 5px auto;
+            margin-bottom: 1em;
+        }
+        .swatch {
+            width: 14.39%;
+            height: 100%;
+            background-color: grey;
+            margin: 2px;
+            float: left;
+            border: 1px solid #ccc;
+        }
 
     </style>
   </head>
@@ -89,7 +104,14 @@
         <img id="reticle" src="reticle.png"/>
         <canvas id="kcanvas" height="256" width="256"></canvas>
     </div>
-
+    <div id="swatches">
+        <div class="swatch" onclick="swatch(this)"></div>
+        <div class="swatch" onclick="swatch(this)"></div>
+        <div class="swatch" onclick="swatch(this)"></div>
+        <div class="swatch" onclick="swatch(this)"></div>
+        <div class="swatch" onclick="swatch(this)"></div>
+        <div class="swatch" onclick="swatch(this)"></div>
+    </div>
 
     Brush Width:<br>
     <input type="range" id="width" min="0" max="200" value="100" step="1" oninput="updateWidth(this.value)">
