--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
     <script type="text/javascript" src="lib/dropzone.js"></script>
     <!-- blur -->
     <script type="text/javascript" src="lib/StackBlur.js"></script>
+    <!-- color-thief https://github.com/lokesh/color-thief -->
+    <script type="text/javascript" src="lib/color-thief.min.js"></script>
     <!-- End of 3rd party libraries -->
 
     <!-- Main tangram library -->
