--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
             float: left;
             border: 1px solid #ccc;
         }
+        #recordbutton {
+            display: none;
+        }
 
     </style>
   </head>
@@ -137,6 +140,7 @@
     <button class="kbutton" onclick="exportCanvas()">SAVE</button>
     <!-- <input type="file" onchange="previewFile()" value="LOAD"> -->
     <button class="kbutton" onclick="clearCanvas();updateMap();">RESET</button>
+    <button class="kbutton" id="recordvideo" onclick="recordVideo();">RECORD VIDEO</button>
     <!-- Hide blur image -->
     <img id="lastCanvas" style="display:none"/>
     </div>
@@ -174,6 +178,8 @@
     <script type="text/javascript" src="lib/StackBlur.js"></script>
     <!-- color-thief https://github.com/lokesh/color-thief -->
     <script type="text/javascript" src="lib/color-thief.min.js"></script>
+    <!-- FileSaver.js https://github.com/eligrey/FileSaver.js -->
+    <script type="text/javascript" src="lib/FileSaver.min.js"></script>
     <!-- End of 3rd party libraries -->
 
     <!-- Main tangram library -->
