--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
     <script src="lib/jscolor.min.js"></script>
 
-    <input id="picker" class="jscolor" value="ab5127" onchange="updateColor(this.value);"><br>
+    <input id="picker" class="jscolor" value="ab5127" onchange="updateColorHex(this.value);"><br>
     <div id="canvaswrapper" height="256">
         <img id="reticle" src="reticle.png"/>
         <canvas id="kcanvas" height="256" width="256"></canvas>
