--- a/index.html
+++ b/index.html
@@ -193,6 +193,8 @@
   </head>
 
   <body>
+
+  <!-- BEGIN UI -->
     <div id="kinkade" onmouseover="hidePicker();">
 
     <script src="lib/jscolor.min.js"></script>
@@ -253,6 +255,9 @@
     <!-- Hide default dropzone thumbnail -->
     <div id="preview-template" style="display: none;"><div></div></div>
 </div>
+
+<!-- END UI -->
+
     <script>
     // http://www.paulirish.com/2009/random-hex-color-code-snippets/
     var n = Math.floor(Math.random()*16777215).toString(16);
@@ -291,7 +296,7 @@
     <!-- End of 3rd party libraries -->
 
     <!-- Main tangram library -->
-    <script src="https://mapzen.com/tangram/0.10/tangram.min.js"></script>
+    <script src="https://mapzen.com/tangram/tangram.min.js"></script>
 
     <!-- Main demo code -->
     <script src="main.js"></script>
