--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         }
 
         .button-small {
+            pointer-events: none;
             -moz-box-shadow: 0px 0px 0px -50px #3dc21b;
             -webkit-box-shadow: 0px 0px 0px -50px #3dc21b;
             box-shadow: 0px 0px 0px -50px #3dc21b;
@@ -140,6 +141,7 @@
         }
 
         .button-big {
+            pointer-events: none;
             -moz-box-shadow: 0px 0px 0px -50px #3dc21b;
             -webkit-box-shadow: 0px 0px 0px -50px #3dc21b;
             box-shadow: 0px 0px 0px -50px #3dc21b;
@@ -164,6 +166,7 @@
 
 
         .button-blurry {
+            pointer-events: none;
             -moz-box-shadow: 0px 0px 18px 18px #3dc21b;
             -webkit-box-shadow: 0px 0px 18px 18px #3dc21b;
             box-shadow: 0px 0px 18px 18px #3dc21b;
@@ -214,11 +217,14 @@
         <div class="swatch" onclick="swatch(this)"></div>
     </div>
 
-    <button class="button-small" onclick=""></button>
-    <button class="button-big" onclick=""></button>
-    <button class="button-blurry" onclick=""></button>
-
-    <br>
+    <div class="hitarea" onclick="updateWidth(50);updateAlpha(.01)"><button class="button-small"></button></div>
+    <div class="hitarea" onclick="updateWidth(50);updateAlpha(.01)"><button class="button-big"></button></div>
+    <div class="hitarea" onclick="updateWidth(50);updateAlpha(.01)"><button class="button-blurry"></button></div>
+    <hr>
+    Draw Lines: <input type="checkbox" id="vector" checked onchange="updateLines(this.checked)"><br>
+    Draw Labels: <input type="checkbox" id="labels" checked onchange="updateLabels(this.checked)"><br>
+    Solid Water: <input type="checkbox" id="ocean" checked onchange="updateOcean(this.checked)"><br>
+    <hr>
     Brush Width:<br>
     <input type="range" id="width" min="0" max="200" value="100" step="1" oninput="updateWidth(this.value)">
     <br>
@@ -233,10 +239,6 @@
     <br>
     Rotate:<br>
     <input type="range" id="rotate" min="-360" max="360" value="0" step="1" oninput="updateRotate(this.value)" onChange="resetRotate()">
-    <br>
-    Draw Lines: <input type="checkbox" id="vector" checked onchange="updateLines(this.checked)"><br>
-    Draw Labels: <input type="checkbox" id="labels" checked onchange="updateLabels(this.checked)"><br>
-    Solid Water: <input type="checkbox" id="ocean" checked onchange="updateOcean(this.checked)"><br>
     <div id="webcamdiv">
     Use Webcam: <input type="checkbox" id="webcam" onchange="useWebcam(this.checked)"><br>
         <span id="flipspan" style="margin-left: 25px">Flip: <input type="checkbox" id="flipwebcam" onchange="flipWebcam(this.checked)" disabled="true"></span><br>
