--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
     <a onclick="swapimg(this)"><img class="example" src="examples/aurora.png"></a>
     <a onclick="swapimg(this)"><img class="example" src="examples/fivedots.png"></a>
     <a onclick="swapimg(this)"><img class="example" src="examples/imhof5.jpg"></a>
+    <a onclick="swapimg(this)"><img class="example" src="examples/emerald.png"></a>
+    <a onclick="swapimg(this)"><img class="example" src="examples/treefrog.png"></a>
+    <a onclick="swapimg(this)"><img class="example" src="examples/normals.jpg"></a>
+    <a onclick="swapimg(this)"><img class="example" src="examples/dorodango.png"></a>
+    <a onclick="swapimg(this)"><img class="example" src="examples/slope.png"></a>
     </div>
     <!-- locations pane -->
     <div id="locations">locations
