--- a/index.html
+++ b/index.html
@@ -97,11 +97,15 @@
     <!-- locations pane -->
     <div id="locations">locations
     <hr>
-    <a class="location" onclick="map.flyTo([35.3624,138.7388],12.65879)">Fuji, JAPAN</a><br>
-    <a class="location" onclick="map.flyTo([45.9808,7.6595],12.35492)">Matterhorn, SUI</a><br>
-    <a class="location" onclick="map.flyTo([37.7393,-119.5929],13.17645)">Yosemite valley, CA, USA</a><br>
+    <a class="location" onclick="map.flyTo([35.3624,138.7388],12.65879)">Mt. Fuji, Japan</a><br>
+    <a class="location" onclick="map.flyTo([45.9808,7.6595],12.35492)">Matterhorn</a><br>
+    <a class="location" onclick="map.flyTo([37.7393,-119.5929],13.17645)">Yosemite Valley, CA, USA</a><br>
     <a class="location" onclick="map.flyTo([44.8535,-118.3326],9.90145)">Northeastern Oregon, USA</a><br>
-    <a class="location" onclick="map.flyTo([53.4419,54.5289],9.06812)">Western Bashkorotostan, RUSSIA</a><br>
+    <a class="location" onclick="map.flyTo([53.4419,54.5289],9.06812)">Western Bashkorotostan, Russia</a><br>
+    <a class="location" onclick="map.flyTo([19.4061,83.8115],11.29881)">Eastern Ghats, India</a><br>
+    <a class="location" onclick="map.flyTo([26.5667,65.0077],9.51131)">Balochistan, Pakistan</a><br>
+    <a class="location" onclick="map.flyTo([29.3709,5.2959],9.25714)">Issaouane Erg, Algeria</a><br>
+    <a class="location" onclick="map.flyTo([36.2434,-112.2843],11.07228)">Grand Canyon, Arizona, USA</a><br>
     </div>
 </div>
 
